# mf-analysis-tool

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  test.py
Data/: Directory.csv  Fund_Data.csv
alembic/: env.py
alembic/versions/: 2d4c11e9a67d_add_test_table.py  815eaa5072f7_remove_test_table.py
app/: database.py  dependencies.py  depenencies.py  main.py  models.py  schemas.py
app/models/: __init__.py  fundIndex.py  historicalnav.py
app/schemas/: __init__.py  getfund.py  getnav.py
src/: get_Fund_index.py  get_nav.py  set_Directory.py
